--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
