--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router": "^7.3.0",
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1"
   },
