--- a/Server/package.json
+++ b/Server/package.json
@@ -1,18 +1,21 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql": "^2.18.1"
+    "mongoose": "^8.12.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.9"
   },
-  "devDependencies": {},
   "description": ""
 }
-  
