--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 PORT = 8080
-MONGOCONNECTION = "mongodb+srv://12iamyasin:yasin1234@cluster0.9rauh.mongodb.net/EMS?retryWrites=true&w=majority&appName=Cluster0"
+MONGOCONNECTION = "mongodb+srv://12iamyasin:yasin1234@cluster0.9rauh.mongodb.net/EMS-Project?retryWrites=true&w=majority&appName=Cluster0"
+# MONGOCONNECTION = "mongodb://localhost:27017/"
