--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 MONGOCONNECTION = "mongodb+srv://12iamyasin:yasin1234@cluster0.9rauh.mongodb.net/EMS-Project?retryWrites=true&w=majority&appName=Cluster0"
 # MONGOCONNECTION = "mongodb://localhost:27017/"
+JWT_SECRET = "yasin-1234"
