--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
