Changes to be committed: 	modified:   frontend/vercel.json

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,18 @@
 {
-    "version": 1,
+    "version": 2,
     "builds": [
-      {"src": "*.js", "use": "@vercel/node"}
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build"
+        }
+      }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dist": "/"
+        "dest": "/index.html"
       }
     ]
   }
