--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,18 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dist": "/index.html"
-      }
-    ]
-  }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
+  ]
+}
