--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.12.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.9"
