--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.12.1",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.3.0",
