--- a/Server/package.json
+++ b/Server/package.json
@@ -19,7 +19,8 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.12.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "satelize": "^0.2.0"
   },
   "description": ""
 }
