--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,14 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-dropdown-select": "^4.11.4",
     "react-icons": "^5.4.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "ui-select": "^0.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
