--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,10 @@
     "lucide-react": "^0.475.0",
     "mongoose": "^8.12.1",
     "notistack": "^3.0.2",
+    "package": "^1.0.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.0.0",
     "react-dropdown-select": "^4.11.4",
     "react-icons": "^5.4.0",
     "react-router": "^7.3.0",
