--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
-    "mongoose": "^8.12.1",
     "notistack": "^3.0.2",
     "package": "^1.0.1",
     "react": "^19.0.0",
@@ -29,6 +24,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "rsuite": "^5.79.1",
     "ui-select": "^0.16.1"
   },
   "devDependencies": {
