Most off Error are solved

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-BACKEND_URL = https://ems-pq48.onrender.comnder.com
+# VITE_BACKEND_URL = https://ems-pq48.onrender.com
+VITE_BACKEND_URL = http://localhost:8080
