--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL = https://ems-pq48.onrender.com
-VITE_BACKEND_URL = http://localhost:8080
+VITE_BACKEND_URL = https://ems-pq48.onrender.com
+# VITE_BACKEND_URL = http://localhost:8080
